--- a/websocket-server/package.json
+++ b/websocket-server/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.15.2",
     "socket.io": "^2.1.0"
   }
