--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@
 */node_modules
 websocket-server/node_modules
 demo/react-demo-app/node_modules
-baas-admin/node_modules
+baas-admin-deprecated/node_modules
