mobile app demo + client library initialize function

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@
 */node_modules
 websocket-server/node_modules
 demo/react-demo-app/node_modules
+demo/react-native-demo-app/node_modules/
 baas-admin-deprecated/node_modules
 *.sqlite3
